--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,26 +5,16 @@
       <%= f.search_field :title_cont, placeholder: "タイトルを検索", class: "input input-bordered flex-grow" %>
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
-    <div class="navbar bg-base-100">
-      <div class="flex-none">
-        <button class="btn btn-square btn-ghost" onclick="toggleDropdown()">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" style="fill: none; stroke: currentColor; stroke-width: 2;">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
-          </svg>
-        </button>
+    <div class="dropdown dropdown-bottom dropdown-end">
+      <div tabindex="0" role="button" class="btn m-1">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" style="fill: none; stroke: currentColor; stroke-width: 2;">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
       </div>
-      <div id="dropdownMenu" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52 hidden">
-        <ul>
-          <li><%= link_to 'プロフィール', users_mypage_path %></li>
-          <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
-        </ul>
-      </div>
+      <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+        <li><%= link_to 'プロフィール', users_mypage_path %></li>
+        <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
+      </ul>
     </div>
   </div>
 </header>
-<script>
-  function toggleDropdown() {
-    const dropdownMenu = document.getElementById('dropdownMenu');
-    dropdownMenu.classList.toggle('hidden');
-  }
-</script>
