--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer footer-center p-4 bg-base-300 text-base-content">
+<footer class="footer footer-center p-4 bg-base-300 text-base-content  w-full">
   <aside>
     <p>Copyright © 2024. ViMemo</p>
   </aside>
